# airflow-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
airflow-common/: Cargo.toml
airflow-common/src/: datetime.rs  lib.rs
airflow-common/src/api/: auth.rs  jsonwebtoken.rs  jsonwebtoken_impl.rs  jwt_compact.rs  jwt_compact_impl.rs  mod.rs
airflow-common/src/executors/: mod.rs  workloads.rs
airflow-common/src/models/: mod.rs  taskinstance.rs  taskinstancekey.rs
airflow-common/src/serialization/: serde.rs
airflow-common/src/utils/: map_index.rs  mod.rs  state.rs  types.rs
airflow-edge-sdk/: Cargo.toml
airflow-edge-sdk/src/: lib.rs
airflow-edge-sdk/src/api/: client.rs  mod.rs  models.rs  reqwest.rs  reqwest_impl.rs
airflow-edge-sdk/src/models/: edge_worker.rs  mod.rs
airflow-edge-sdk/src/worker/: edge_worker.rs  intercom.rs  job.rs  mod.rs  runtime.rs
airflow-task-sdk/: Cargo.toml
airflow-task-sdk/src/: lib.rs
airflow-task-sdk/src/api/: client.rs  datamodels.rs  factory.rs  mod.rs  reqwest_impl.rs
airflow-task-sdk/src/api/reqwest_impl/: mod.rs  task_instances.rs
airflow-task-sdk/src/bases/: mod.rs  operator.rs  xcom.rs
airflow-task-sdk/src/definitions/: context.rs  dag.rs  dagbag.rs  mappedoperator.rs  mod.rs  operator.rs  serde.rs  task.rs  xcom.rs
airflow-task-sdk/src/execution/: comms.rs  mod.rs  runtime.rs  state.rs  supervisor.rs  task_instance.rs  task_runner.rs
examples/: Cargo.toml
examples/src/: example.rs  lib.rs  tokio.rs  tracing.rs
