[package]
name = "airflow-edge-sdk"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
publish = false
rust-version.workspace = true

[dependencies]
airflow-common = { path = "../airflow-common", default-features = false }
cfg-if = "1"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
trait-variant = "0.1"

# Optional dependencies
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }

[dev-dependencies]
httpmock = "0.8.0-alpha.1"
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["macros"] }

[features]
default = ["reqwest", "std"]
reqwest = ["dep:reqwest"]
std = ["airflow-common/std", "serde/std", "serde_json/std", "thiserror/std"]
