[package]
name = "airflow-edge-sdk"
description = "Edge Executor for Apache Airflow."
version = "0.0.1"
# workspace
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
airflow-common = { path = "../airflow-common", default-features = false }
airflow-task-sdk = { path = "../airflow-task-sdk", default-features = false }
cfg-if = "1"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.2.x", default-features = false }
trait-variant = "0.1"

# Optional dependencies
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }

[dev-dependencies]
httpmock = "0.8.0-alpha.1"
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["macros"] }

[features]
default = ["reqwest", "std"]
reqwest = ["dep:reqwest"]
std = ["airflow-common/std", "serde/std", "serde_json/std", "thiserror/std", "tracing/std"]
