[package]
name = "airflow-task-sdk"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
publish = false

[dependencies]
airflow-common = { path = "../airflow-common", default-features = false }
cfg-if = "1"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }

[features]
default = ["std"]
std = ["airflow-common/std", "serde/std", "thiserror/std"]
