[package]
name = "airflow-task-sdk"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
publish = false
rust-version.workspace = true

[dependencies]
airflow-common = { path = "../airflow-common", default-features = false }
cfg-if = "1"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
trait-variant = "0.1"

reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
httpmock = "0.8.0-alpha.1"
tokio = { version = "1", features = ["macros"] }

[features]
default = ["reqwest", "std", "tracing"]
reqwest = ["dep:reqwest"]
std = ["airflow-common/std", "serde/std", "serde_json/std", "thiserror/std", "tracing?/std"]
tracing = ["dep:tracing"]
