[package]
name = "examples"
version = "0.0.0"
edition = "2024"
license-file = "../LICENSE"
publish = false
rust-version.workspace = true
default-run = "edge-worker"

[dependencies]
airflow-common = { path = "../airflow-common" }
airflow-edge-sdk = { path = "../airflow-edge-sdk" }
airflow-task-sdk = { path = "../airflow-task-sdk" }
dotenvy = "0.15"
log = { version = "0.4" }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "1"
