[package]
name = "examples"
version = "0.0.0"
edition = "2024"
license-file = "../LICENSE"
publish = false
rust-version.workspace = true
default-run = "edge-worker"

[dependencies]
airflow-common = { path = "../airflow-common" }
airflow-edge-sdk = { path = "../airflow-edge-sdk" }
airflow-task-sdk = { path = "../airflow-task-sdk" }
dotenvy = "0.15"
log = { version = "0.4" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.2.x" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.2.x", features = [
    "env-filter",
] }
whoami = "1"
